[gd_scene load_steps=4 format=3 uid="uid://1r7nl22b5o0o"]

[ext_resource type="Script" path="res://inventory/item_1.gd" id="1_nhu0d"]
[ext_resource type="Texture2D" uid="uid://dhr6830wmefb6" path="res://sprites/IMG_0500.PNG" id="2_qh42t"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tpy42"]
bounce = 0.4

[node name="item1" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_tpy42")
script = ExtResource("1_nhu0d")

[node name="Button" type="Button" parent="."]
offset_left = -57.0
offset_top = -61.0
offset_right = 57.0
offset_bottom = 61.0
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_qh42t")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-101, -47, -113, -27, -119, -6, -119, 10, -116, 24, -107, 31, -85, 35, -47, 27, -1, -3, 39, -25, 63, -27, 88, -26, 115, -25, 133, -32, 142, -43, 143, -54, 139, -63, 107, -77, 87, -88, 80, -121, 67, -133, 48, -133, -20, -118, -39, -102, -48, -87, -67, -79)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
